# ported_tim

./: .editorconfig  .gitattributes  .gitignore  .luarc.json  CONTRIBUTING.md  Cargo.toml  Gemfile  README.md  Rakefile  TASKLIST.md  about.hbs  aulua.yaml  aviutl2.toml  catalog_index.json  mise.toml  rulesync.jsonc
.claude/: settings.json
.gemini/: settings.json
.github/workflows/: release.yml
.rulesync/: mcp.json
.rulesync/mcp/: ghidra_mcp_bridge.py
.rulesync/rules/: hlsl_pma_vs_dll_straight.md  hlsl_vs_dll_pixels.md  lua.md  rewrite_unoptimized.md
demo/: demo.aup2
i18n/: Default.yaml  English.yaml
lua/26Poly/: 二十六面体.anm.lua  二十六面体.obj.lua
lua/Access/: カメラデータコピー(子).lua  カメラデータコピー(親).lua  サイズ指定.lua  ティーカップ.lua  ミラーT.anm.lua  律部屋テーブル.lua  領域サイズ指定+事前拡大回転.lua
lua/AuraDcg/: オーラ放出.anm.lua
lua/AutoTgt/: オートターゲット.cam.lua  オートターゲット100.cam.lua  位置補正.cam.lua  位置補正R.cam.lua
lua/BarCode/: バーコードT.obj.lua
lua/Beehive/: 蜂の巣モザイク.anm.lua
lua/BezSpe/: ベジエ軌道Ｔ.obj.lua  ベジエ軌道Ｔ.tra.lua
lua/BloLus/: ブロックラスターT.anm.lua
lua/BomPuz21/: old.lua  パズルピース.obj.lua  砕け散るパズル.anm.lua
lua/Broken/: 砕け散るT.anm.lua
lua/BrokenB/: 砕け散る球.anm.lua
lua/Bubble/: 泡.obj.lua
lua/ChromaV2/: 色収差.anm.lua
lua/CogWhl/: 歯車.anm.lua
lua/ColAdj6/: しきい値.lua  イコライズ.lua  ガンマ補正.lua  ネオン.lua  (+38 more)
note/: invalid_defalut_check.md
script/: SampleAnimationEffect.anm2  SampleShader.hlsl
src/: bias_deletion.rs  binarization_rgb.rs  color_reduction.rs  enh_grayscale.rs  equalize.rs  grainy.rs  grayscale.rs  lib.rs  metal.rs  reduction.rs  tone_curve.rs
tester/: .gitignore  Cargo.toml  server.py
(+621 files in other folders)
