[package]
name = "ported_tim"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]
name = "ported_tim"

[dependencies]
anyhow = "1.0.102"
aviutl2 = "0.20.3"
dashmap = "6.1.0"
image = { version = "0.25.9", default-features = false, features = ["webp"] }
include_dir = "0.7.4"
rand = "0.10.0"
