[workspace]
resolver = "3"
members = [".", "./tester"]

[package]
name = "ported_tim"
version = "0.1.0-preview.1"
edition = "2024"

[lib]
crate-type = ["cdylib"]
name = "ported_tim"

[dependencies]
anyhow = "1.0.102"
aviutl2 = "0.27.0"
dashmap = "6.1.0"
fastrand = "2.4.1"
image = { version = "0.25.9", default-features = false, features = ["webp"] }
include_dir = "0.7.4"
rayon = "1.11.0"
